@@ -429,7 +429,7 @@ class ListRollbackCommand(ConaryCommand):
     commands = ['rblist']
 
     def runCommand(self, cfg, argSet, otherArgs):
-        if argSet: return self.usage()
+        if argSet or len(otherArgs) > 2: return self.usage()
         db = openDatabase(cfg.root, cfg.dbPath)
         rollbacks.listRollbacks(db, cfg)
 _register(ListRollbackCommand)
@@ -451,10 +451,10 @@ class RollbackCommand(ConaryCommand):
             kwargs['replaceFiles'] = True
             del argSet['replace-files']
         kwargs['callback'] = updatecmd.UpdateCallback(cfg)
-        if argSet: return self.usage()
+        if argSet or len(otherArgs) != 3: return self.usage()
         db = openDatabase(cfg.root, cfg.dbPath)
         args = [db, cfg] + otherArgs[2:]
-        rollbacks.apply(*args, **kwargs)
+        rollbacks.apply(db, cfg, otherArgs[2], **kwargs)
 _register(RollbackCommand)
 
 
